--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!-- app.component.html -->
 <div class="p-10">
-<app-student></app-student>
+<!-- <app-student></app-student> -->
+<!-- <app-teacher></app-teacher> -->
+ <router-outlet></router-outlet>
 </div>
